# ECommerce-Recommender

./: app.py  main.py  pyproject.toml
flipkart/: data_converter.py
